--- a/CryptoExchange/src/app/layout/nav/nav.component.html
+++ b/CryptoExchange/src/app/layout/nav/nav.component.html
@@ -26,7 +26,7 @@
           <a class="nav-link" href="#">REGISTRARSE</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">INICIAR SESIÓN</a>
+          <a class="nav-link" routerLink="/login">INICIAR SESIÓN</a>
         </li>
       </ul>
     </div>
