--- a/CryptoExchange/src/app/pages/login/login.component.html
+++ b/CryptoExchange/src/app/pages/login/login.component.html
@@ -1,28 +1,39 @@
-<div class="container">
+<div class="mt-3 mb-3 container rounded overflow-hidden shadow">
     <div class="row">
-        <div class="col">hola</div>
-        <div class="col">
-            <h3 class="text-center">Iniciar Sesión</h3>
-            
+        <div class="loginPage col-7 d-none d-md-block">
+
+        </div>
+
+        <div class="loginPageforms pt-5 pb-5 col-12 col-md-5 ">
+            <h3 class="mt-5 text-center">Iniciar Sesión</h3>
             <form>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email">
+                    <div class="input-group">
+                        <span class="input-group-text" id="basic-addon1">
+                            <i class="bi bi-person-circle"></i>
+                        </span>
+                        <input type="email" class="form-control" id="email">
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Contraseña</label>
-                    <input type="password" class="form-control" id="password">
+                    <div class="input-group">
+                        <span class="input-group-text" id="basic-addon1">
+                            <i class="bi bi-key-fill"></i>
+                        </span>
+                        <input type="password" class="form-control" id="password">
+                    </div>
                 </div>
                 <div class="d-grid my-4">
-                    <!-- <input type="button" class="btn btn-primary" value="Iniciar Sesión"> -->
                     <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-                </div>
-                
+                </div>                
                 <div class="my-3">
-                    <span>No tienes cuenta? <a routerLink="#">Regístrate</a></span>
+                    <span>No tienes cuenta? <a routerLink="/register">Regístrate</a></span>
                 </div>
             </form>
             
         </div>
     </div>
+
 </div>
