Se agrega component para el registro de usuario, se crean las validaciones para el formulario.

--- a/CryptoExchange/src/app/layout/nav/nav.component.html
+++ b/CryptoExchange/src/app/layout/nav/nav.component.html
@@ -25,7 +25,7 @@
           <a class="nav-link" routerLink="/quienes-somos">¿QUIENES SOMOS?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">REGISTRARSE</a>
+          <a class="nav-link" routerLink="/signup">REGISTRARSE</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/login">INICIAR SESIÓN</a>
