--- a/CryptoExchange/src/app/pages/login/login.component.css
+++ b/CryptoExchange/src/app/pages/login/login.component.css
@@ -1,5 +1,5 @@
 .loginPage{
-    background-image: url('https://img.freepik.com/free-vector/bank-login-concept-illustration_114360-7964.jpg?w=2000');
+    background-image: url('../../../assets/img/login.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
