Detalles de movimientos

--- a/CryptoExchange/src/app/pages/movimientos/movimientos.component.css
+++ b/CryptoExchange/src/app/pages/movimientos/movimientos.component.css
@@ -26,6 +26,18 @@ table, th, td {
     text-align: center;
 
   }
+  .deposito{
+    color: green;
+  }
+
+  .extraccion{
+    color: red;
+  }
+  .table a
+{
+    display:block;
+    text-decoration:none;
+}
 
 
 
