--- a/CryptoExchange/src/app/pages/movimientos/movimientos.component.html
+++ b/CryptoExchange/src/app/pages/movimientos/movimientos.component.html
@@ -1,19 +1,23 @@
-<div>
-    <h1>Últimos Movimientos</h1>
-    <table class="table">
-        <thead>
-            <th>Fecha</th>
-            <th style="width: 20%;">Operación</th>
-            <th style="width: 20%;">Monto</th>
-            <th style="width: 10%;">N° de cuenta</th>
-        </thead>
-        <tbody>
-            <tr *ngFor="let item of movimientos">
-                <td>{{hoy|date: "dd/MM/yy, hh:mm"}}</td>
-                <td>{{item.operacion}}</td>
-                <td>{{item.monto|currency}}</td>
-                <td>{{item.numeroDeCuenta}}</td>
-            </tr>
-        </tbody>
-    </table>
-    </div>
+<div class="table-responsive">
+  <h1>Últimos Movimientos</h1>
+  <table class="table table-hover">
+    <thead>
+      <th scope="col">Fecha</th>
+      <th scope="col" style="width: 20%">Operación</th>
+      <th scope="col" style="width: 20%">Monto</th>
+      <th scope="col">Saldo</th>
+      <th scope="col" style="width: 10%">N° de cuenta</th>
+    </thead>
+    <tbody data-link="row" class="rowlink">
+      <!-- para que esto muestre datos, primero hay que levantar la API en la terminal con "json-server --watch db.json" -->
+
+      <tr *ngFor="let item of movimientos" role="button" routerLink={{item.detalle}}>
+        <td>{{ hoy | date: "dd/MM/yy, hh:mm" }}</td>
+        <td>{{ item.operacion }}&nbsp;</td>
+        <td>{{ item.monto | currency }} {{item.moneda}}</td>
+        <td>{{ item.saldo | currency}} {{item.moneda}}</td>
+        <td>{{ item.numeroDeCuenta }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
