--- a/CryptoExchange/src/app/pages/landing/landing.component.html
+++ b/CryptoExchange/src/app/pages/landing/landing.component.html
@@ -1,45 +1,300 @@
-<section>
+<!-- ======= Hero Section ======= -->
+<section id="hero">
   <div class="container">
-    <div class="text-center">
-      <h2 class="text-uppercase">Servicios</h2>
-    </div>
-    <div class="row">
-      <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-          <i class="fas fa-circle fa-stack-2x text-warning"></i>
-          <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-        </span>
-        <h4 class="my-3">Operaciones en Pesos y en Moneda Extranjera</h4>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
-          maxime quam architecto quo inventore harum ex magni, dicta
-          impedit.
-        </p>
+    <div class="row justify-content-between">
+      <div
+        class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center"
+      >
+        <div data-aos="zoom-out">
+          <h1>Disfrutá de tu mejor <span>experiencia</span></h1>
+          <h2>C-GROUP Te está esperando!</h2>
+          <div class="text-center text-lg-start">
+            <a
+              href="/signup"
+              class="btn-get-started scrollto nav-link"
+              routerLink="/signup"
+              >Empezá Ahora</a
+            >
+          </div>
+        </div>
       </div>
-      <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-          <i class="fas fa-circle fa-stack-2x text-warning"></i>
-          <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-        </span>
-        <h4 class="my-3">Transacciones Online</h4>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
-          maxime quam architecto quo inventore harum ex magni, dicta
-          impedit.
-        </p>
-      </div>
-      <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-          <i class="fas fa-circle fa-stack-2x text-warning"></i>
-          <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-        </span>
-        <h4 class="my-3">Criptomoneda</h4>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
-          maxime quam architecto quo inventore harum ex magni, dicta
-          impedit.
-        </p>
+      <div
+        class="col-lg-4 order-1 order-lg-2 hero-img"
+        data-aos="zoom-out"
+        data-aos-delay="300"
+      >
+        <img src="assets/img/foto2.svg" class="img-fluid animated" alt="" />
       </div>
     </div>
   </div>
+
+  <svg
+    class="hero-waves"
+    xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink"
+    viewBox="0 24 150 28 "
+    preserveAspectRatio="none"
+  >
+    <defs>
+      <path
+        id="wave-path"
+        d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"
+      />
+    </defs>
+    <g class="wave1">
+      <use xlink:href="#wave-path" x="50" y="3" fill="rgba(255,255,255, .1)" />
+    </g>
+    <g class="wave2">
+      <use xlink:href="#wave-path" x="50" y="0" fill="rgba(255,255,255, .2)" />
+    </g>
+    <g class="wave3">
+      <use xlink:href="#wave-path" x="50" y="9" fill="#fff" />
+    </g>
+  </svg>
 </section>
+<!-- End Hero -->
+
+<main id="main">
+  <!-- ======= About Section ======= -->
+  <section id="about" class="about">
+    <div class="container-fluid">
+      <div class="row">
+        <div
+          class="col-xl-5 col-lg-6 d-flex justify-content-center align-items-stretch"
+          data-aos="fade-right"
+        >
+          <img
+            src="assets/img/foto5.svg"
+            class="img-fluid animated mb-4"
+            alt=""
+          />
+        </div>
+
+        <div
+          class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5"
+          data-aos="fade-left"
+        >
+          <div
+            class="icon-box"
+            style="display: flex; flex-direction: row; align-items: center"
+            data-aos="zoom-in"
+            data-aos-delay="100"
+          >
+            <div class="icon"><i class="bx bx-gift"></i></div>
+            <h4 class="title" style="cursor: pointer">
+              Sin costos adicionales
+            </h4>
+          </div>
+
+          <div
+            class="icon-box"
+            style="display: flex; flex-direction: row; align-items: center"
+            data-aos="zoom-in"
+            data-aos-delay="200"
+          >
+            <div class="icon"><i class="bx bx-fingerprint"></i></div>
+            <h4 class="title" style="cursor: pointer">
+              Tu seguridad es nuestra prioridad
+            </h4>
+          </div>
+
+          <div
+            class="icon-box"
+            style="display: flex; flex-direction: row; align-items: center"
+            data-aos="zoom-in"
+            data-aos-delay="300"
+          >
+            <div class="icon"><i class="bx bx-world"></i></div>
+            <h4 class="title" style="cursor: pointer">
+              Desde cualquier lugar del mundo
+            </h4>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End About Section -->
+
+  <!-- ======= Counts Section ======= -->
+  <section id="counts" class="counts">
+    <div class="container">
+      <div class="row" data-aos="fade-up">
+        <div class="col-lg-3 col-md-6">
+          <div class="count-box">
+            <i class="bi bi-emoji-smile"></i>
+            <span
+              data-purecounter-start="0"
+              data-purecounter-end="244"
+              data-purecounter-duration="1"
+              class="purecounter"
+            ></span>
+            <p>Mil usuarios al rededor del mundo</p>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+          <div class="count-box">
+            <i class="bi bi-journal-richtext"></i>
+            <span
+              data-purecounter-start="0"
+              data-purecounter-end="207"
+              data-purecounter-duration="1"
+              class="purecounter"
+            ></span>
+            <p>Mil transacciones por día</p>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+          <div class="count-box">
+            <i class="bi bi-headset"></i>
+            <span
+              data-purecounter-start="0"
+              data-purecounter-end="24"
+              data-purecounter-duration="1"
+              class="purecounter"
+            ></span>
+            <p>Horas diarias de soporte</p>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+          <div class="count-box">
+            <i class="bi bi-people"></i>
+            <span
+              data-purecounter-start="0"
+              data-purecounter-end="15"
+              data-purecounter-duration="1"
+              class="purecounter"
+            ></span>
+            <p>Ranking en satisfacción</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ======= Testimonials Section ======= -->
+  
+  <section id="testimonials" class="testimonials">
+    <div class="container">
+      <div
+        class="testimonials-slider swiper"
+        data-aos="fade-up"
+        data-aos-delay="100"
+      >
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <img
+                src="assets/img/testimonials/testimonials-1.jpg"
+                class="testimonial-img"
+                alt=""
+              />
+              <h3>Gonzalo Martín</h3>
+              <h4>Ceo &amp; Fundador</h4>
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Desde que utilizo la App de C-GROUP, he podido invertir como
+                nunca antes!
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+            </div>
+          </div>
+          <!-- End testimonial item -->
+
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <img
+                src="assets/img/testimonials/testimonials-2.jpg"
+                class="testimonial-img"
+                alt=""
+              />
+              <h3>Viviana Suarez</h3>
+              <h4>Diseñadora Gráfica</h4>
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Con C-GROUP es posible empezar a operar en segundos!
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+            </div>
+          </div>
+          <!-- End testimonial item -->
+
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <img
+                src="assets/img/testimonials/testimonials-3.jpg"
+                class="testimonial-img"
+                alt=""
+              />
+              <h3>Mónica San Martín</h3>
+              <h4>Dueña de tiendas de indumentaria</h4>
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Es la App que estábamos necesitando!
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+            </div>
+          </div>
+          <!-- End testimonial item -->
+
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <img
+                src="assets/img/testimonials/testimonials-4.jpg"
+                class="testimonial-img"
+                alt=""
+              />
+              <h3>Luis Amador</h3>
+              <h4>Desarrollador web</h4>
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Cuando tuve dudas, me respondieron en seguida y me dieron mucha
+                seguridad!
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+            </div>
+          </div>
+          <!-- End testimonial item -->
+
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <img
+                src="assets/img/testimonials/testimonials-5.jpg"
+                class="testimonial-img"
+                alt=""
+              />
+              <h3>Juan Larson</h3>
+              <h4>Emprendedor</h4>
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Con la App de C-GROUP siento que mi dinero vale más!
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+            </div>
+          </div>
+          <!-- End testimonial item -->
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </div>
+  </section>
+  <!-- End Testimonials Section -->
+
+  <a
+    href="#"
+    class="back-to-top d-flex align-items-center justify-content-center"
+    ><i class="bi bi-arrow-up-short"></i
+  ></a>
+  <div id="preloader"></div>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+</main>
