--- a/CryptoExchange/src/app/layout/footer/footer.component.html
+++ b/CryptoExchange/src/app/layout/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-9 text-lg-start">
-        Copyright &copy; PIL Grupo C
+        Copyright &copy; C-Group
       </div>
       <div class="col-lg-3 my-3 my-lg-0">
         <a class="btn btn-background text-white" href="#!"><i class="fab fa-twitter"></i></a>
