--- a/CryptoExchange/src/app/layout/nav/nav.component.html
+++ b/CryptoExchange/src/app/layout/nav/nav.component.html
@@ -6,12 +6,12 @@
       data-bs-toggle="collapse"
       aria-expanded="false"
       aria-label="Toggle navigation"
-      data-bs-target="#navbarSupportedContent" 
+      data-bs-target="#navbarSupportedContent"
     >
     <!--Se agrega data-bs-target="#navbarSupportedContent" y el id="navbarSupportedContent" en el nav-->
     <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-logo" href="#">
+    <a class="navbar-logo" href="/dashboard">
       <img src="../../../assets/img/cg.png" >
     </a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
