--- a/CryptoExchange/src/app/pages/login/login.component.html
+++ b/CryptoExchange/src/app/pages/login/login.component.html
@@ -34,17 +34,18 @@
                     </div>
                 </div>
                 <div class="d-grid my-4">
-                    <button type="submit" class="btn btn-primary" [disabled]="!form.valid">
+                    <a href="/dashboard"> <button type="submit" class="btn btn-primary" [disabled]="!form.valid">
                         Iniciar Sesión
                     </button>
-                </div>                
+                  </a>
+                </div>
                 <div class="my-3">
                     <span>No tienes cuenta? <a routerLink="/signup">Regístrate</a></span>
                 </div>
             </form>
-            
+
         </div>
-        
+
     </div>
 
 </div>
