--- a/CryptoExchange/src/app/pages/dashboard/dashboard.component.html
+++ b/CryptoExchange/src/app/pages/dashboard/dashboard.component.html
@@ -1,46 +1,48 @@
-
-<div class="container d-flex justify-content-center align-items-center">
-  <div class="row justify-content-md-center ">
-    <div class="card" style="width: 18rem;">
-      <img src="/../assets/img/—Pngtree—golden dollar coin money_5505816.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h3 class="card-title">Tu saldo en AR$</h3>
-        <h2 class="card-text"> <b> 4000</b></h2>
-        <!-- <a href="/movimientos" class="btn btn-primary" routerLink="/movimientos">Conocé el detalle de tus últimos movimientos</a> -->
+<div class="container bordery">
+  <h1 class="row justify-content-center white-text">¡Bienvenido!</h1>
+  <div class="row justify-content-around">
+    <div class="col-sm-3">
+      <div class="card">
+        <div class="card-header">
+          <h4>Tu saldo en ARS</h4>
+        </div>
+        <div class="card-body">
+          <h5><i class="bi bi-currency-dollar"></i>{{ saldos[0].saldo }}</h5>
+          <a href="/movimientos" routerLink="/movimientos" class="btn btn-info"
+            >Últimos movimientos</a
+          >
+        </div>
+      </div>
+    </div>
+    <div class="col-3">
+<img src="assets/img/bitcoin.png" alt="imagen del símbolo de bitcoin" class="responsive">
+    </div>
+    <div class="col-sm-3">
+      <div class="card">
+        <div class="card-header">
+          <h4>Tu saldo en BTC</h4>
+        </div>
+        <div class="card-body">
+          <h5><i class="bi bi-currency-bitcoin"></i>{{ saldos[1].saldo }}</h5>
+          <a
+            href="/movimientos"
+            routerLink="/movimientos"
+            class="btn btn-info"
+            style="--bs-btn-color: black"
+            >Últimos movimientos</a
+          >
+        </div>
       </div>
     </div>
   </div>
 
-  <div class="row justify-content-md-center ">
-    <div class="card" style="width: 18rem;">
-      <img src="/../assets/img/—Pngtree—3d realistic bitcoin cryptocurrency vector_6928503.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h3 class="card-title">Tu saldo en BTC</h3>
-        <h2 class="card-text" > <b> 5</b> </h2>
-
-              <!-- <a href="/movimientos" class="btn btn-primary" routerLink="/movimientos">Conocé el detalle de tus últimos movimientos</a> -->
-      </div>
+  <br />
+  <br />
+  <br />
+  <br />
+    <div class="row box justify-content-around">
+      <a href="/movimientos" routerLink="/movimientos" class="btn btn-info btn-block col-md-4 col-lg-2">Retirá</a>
+      <a href="/movimientos" routerLink="/movimientos" class="btn btn-info btn-block col-md-4 col-lg-2">Depositá</a>
     </div>
-  </div>
+    
 </div>
-<br>
-
-<div class="container d-flex justify-content-center align-items-center">
-<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-  <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-  <label class="btn btn-outline-primary background" for="btnradio1">Depositá</label>
-
-  <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-  <label class="btn btn-outline-primary" for="btnradio2">Retirá</label>
-
-  <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-    <a href="/movimientos" class="btn btn-primary" routerLink="/movimientos">Últimos movimientos</a>
-
-  <!-- <label class="btn btn-outline-primary" for="btnradio3">Últimos movimientos</label> -->
-
-</div>
-</div>
-
-
-
-
