--- a/CryptoExchange/src/app/pages/detalles-movimientos/detalles-movimientos.component.html
+++ b/CryptoExchange/src/app/pages/detalles-movimientos/detalles-movimientos.component.html
@@ -144,6 +144,4 @@
     </tbody>
   </table>
 </div>
-<button type="button" class="button button1 button1:hover">
-  <a routerLink="/movimientos">Volver</a>
-</button>
+<a href="/movimientos" routerLink="/movimientos" class="btn btn-info ">Volver</a>
