--- a/CryptoExchange/src/app/layout/footer/footer.component.html
+++ b/CryptoExchange/src/app/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="py-2 background text-white fixed-bottom">
+<footer class="py-2 background text-white">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-9 text-lg-start">
