Se fixean algunos errores de tamano en formularios

--- a/CryptoExchange/src/app/pages/login/login.component.css
+++ b/CryptoExchange/src/app/pages/login/login.component.css
@@ -1,6 +1,9 @@
 .loginPage{
     background-image: url('../../../assets/img/login.jpg');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:auto;
     background-position: center;
+}
+.loginPageforms{
+    height: 510px;
 }
