--- a/CryptoExchange/src/app/pages/signup/signup.component.html
+++ b/CryptoExchange/src/app/pages/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5 mb-5 rounded-4 overflow-hidden shadow bg-light bg-opacity-10">
     <div class="row">
-        <div class="p-3 col-12 col-md-6 ">
+        <div class="p-3 col-12 col-md-6 signUpForm d-flex flex-column justify-content-center">
             <div>
                 <div class="card-header bg-white bg-light mb-3">
                     <h4 class="text-primary text-center mb-5 mt-3"><i class="bi bi-person-workspace"></i> Registro de Usuario</h4>
