--- a/CryptoExchange/src/app/pages/dashboard/dashboard.component.html
+++ b/CryptoExchange/src/app/pages/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="card-body">
           <h5><i class="bi bi-currency-dollar"></i>{{ saldos[0].saldo }}</h5>
-          <a href="/movimientos" routerLink="/movimientos" class="btn btn-info"
+          <a href="/movimientos" [routerLink]="['/movimientos','ARS']" class="btn btn-info"
             >Últimos movimientos</a
           >
         </div>
@@ -26,7 +26,7 @@
           <h5><i class="bi bi-currency-bitcoin"></i>{{ saldos[1].saldo }}</h5>
           <a
             href="/movimientos"
-            routerLink="/movimientos"
+            [routerLink]="['/movimientos', 'BTC']"
             class="btn btn-info"
             style="--bs-btn-color: black"
             >Últimos movimientos</a
