cambio del tamaño de las imagenes

--- a/CryptoExchange/src/app/pages/landing/landing.component.html
+++ b/CryptoExchange/src/app/pages/landing/landing.component.html
@@ -175,7 +175,6 @@
   </section>
 
   <!-- ======= Testimonials Section ======= -->
-  
   <section id="testimonials" class="testimonials">
     <div class="container">
       <div
@@ -187,7 +186,7 @@
           <div class="swiper-slide">
             <div class="testimonial-item">
               <img
-                src="assets/img/testimonials/testimonials-1.jpg"
+                src="assets/img/testimonials/testimonials-1.webp"
                 class="testimonial-img"
                 alt=""
               />
@@ -224,7 +223,7 @@
           <div class="swiper-slide">
             <div class="testimonial-item">
               <img
-                src="assets/img/testimonials/testimonials-3.jpg"
+                src="assets/img/testimonials/testimonials-3.webp"
                 class="testimonial-img"
                 alt=""
               />
@@ -242,7 +241,7 @@
           <div class="swiper-slide">
             <div class="testimonial-item">
               <img
-                src="assets/img/testimonials/testimonials-4.jpg"
+                src="assets/img/testimonials/testimonials-4.webp"
                 class="testimonial-img"
                 alt=""
               />
