--- a/CryptoExchange/src/app/pages/dashboard/dashboard.component.html
+++ b/CryptoExchange/src/app/pages/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="col-3">
-<img src="assets/img/bitcoin.png" alt="imagen del símbolo de bitcoin" class="responsive">
+<img src="assets/img/bitcoin.webp" alt="imagen del símbolo de bitcoin" class="responsive">
     </div>
     <div class="col-sm-3">
       <div class="card">
@@ -44,5 +44,5 @@
       <a href="/movimientos" routerLink="/movimientos" class="btn btn-info btn-block col-md-4 col-lg-2">Retirá</a>
       <a href="/movimientos" routerLink="/movimientos" class="btn btn-info btn-block col-md-4 col-lg-2">Depositá</a>
     </div>
-    
+
 </div>
