--- a/CryptoExchange/src/app/pages/signup/signup.component.html
+++ b/CryptoExchange/src/app/pages/signup/signup.component.html
@@ -50,7 +50,7 @@
                                     Debe especificar una Contraseña
                                 </div>
                                 <div *ngIf="password?.errors?.['minlength'] " class="invalid-feedback">
-                                    La Contraseña debe tener minímo 8 caracteres
+                                    La contraseña debe tener minímo 8 caracteres
                                 </div>
                         </div>
                         <div class="d-grid my-4">
