--- a/CryptoExchange/src/assets/css/style.css
+++ b/CryptoExchange/src/assets/css/style.css
@@ -203,7 +203,7 @@ h6 {
   padding: 10px 30px;
   border-radius: 50px;
   transition: 0.5s;
-  color: #fff;
+  color: rgb(236, 232, 232);
   background: #1acc8d;
 }
 
