--- a/CryptoExchange/src/app/pages/detalles-movimientos/detalles-movimientos.component.css
+++ b/CryptoExchange/src/app/pages/detalles-movimientos/detalles-movimientos.component.css
@@ -10,9 +10,9 @@ td {
 }
 
 th {
-    background-color: #06283d;
+    background-color: #062233;
     text-align: left;
-    color: whitesmoke;
+    color: rgb(253, 246, 246);
 }
 
 table {
@@ -25,11 +25,11 @@ td {
 }
 
 tr {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid rgb(211, 211, 211);
 }
 
 td {
-    background-color: whitesmoke;
+    background-color: rgb(233, 230, 230);
 }
 
 h1 {
